--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/panapo
 
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Alanbo0824
 
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.show-sql= true
@@ -12,7 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.port=8081
 jwt.secret=panapo
-jwt.expiration=1000000
+jwt.expiration=42300
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
