--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/panapo
 
 spring.datasource.username=root
-spring.datasource.password=Alanbo0824
+spring.datasource.password=root
 
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.show-sql= true
@@ -16,6 +16,6 @@ jwt.expiration=42300
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=alansponja24@gmail.com
-spring.mail.password=epicpbvzaiwvyrls   
+spring.mail.username=cdsutez2022@gmail.com
+spring.mail.password=zqztzmetwgtiigui   
 spring.mail.properties.mail.smtp.starttls.enable=true
