--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/panapo
+spring.datasource.url=jdbc:mysql://localhost:3306/panapo?useSLL=false&serverTimezone=UTC&useLegacyDateTimeCode=false
 
 spring.datasource.username=root
 spring.datasource.password=Alanbo0824
@@ -16,6 +16,7 @@ jwt.expiration=42300
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=cdsutez2022@gmail.com
-spring.mail.password=zqztzmetwgtiigui   
+spring.mail.username=alansponja24@gmail.com
+spring.mail.password=epicpbvzaiwvyrls
+spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
