--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 
-spring.datasource.url=jdbc:mysql://panapo.cmugwwzhlowu.us-east-1.rds.amazonaws.com:3306/panapo
-spring.datasource.username=admin
-spring.datasource.password=123456789
+spring.datasource.url=jdbc:mysql://localhost:3306/panapo?useSLL=false&serverTimezone=UTC&useLegacyDateTimeCode=false
+
+spring.datasource.username=root
+spring.datasource.password=
 
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.show-sql= true
